--- a/Webtestapp_vue/index.html
+++ b/Webtestapp_vue/index.html
@@ -7,9 +7,11 @@
   <!-- 最新版本的 Bootstrap 核心 CSS 文件 -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css">
   <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/1.0.12/vue.js"></script>
+  <script src="static/Bmob-1.6.7.min.js"></script>
 </head>
 
 <body>
