--- a/Webtestapp_ele/index.html
+++ b/Webtestapp_ele/index.html
@@ -1,23 +1,31 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"> -->
-    <script src="static/Bmob-1.6.7.min.js"></script>
-    <!-- 最新版本的 Bootstrap 核心 CSS 文件 -->
-   
-    <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
-    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"></script> -->
-    <title>WEB题库</title>
-    <style>
-      body{
-           background: linear-gradient(90deg,#1cbbb4,#0081ff);
-      }
-    </style>
-  </head>
-  <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <!-- 最新版本的 Bootstrap 核心 CSS 文件 -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="static/css/button.css">
+  <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
+  <!-- <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+  <script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/1.0.12/vue.js"></script> -->
+  <script src="static/Bmob-1.6.7.min.js"></script>
+
+  <title>WEB题库</title>
+  <style>
+    body {
+      background: linear-gradient(90deg, #1cbbb4, #0081ff);
+    }
+
+  </style>
+</head>
+
+<body>
+  <div id="app"></div>
+  <!-- built files will be auto injected -->
+</body>
+
 </html>
